# baecon

./: ..toml  .gitignore  Basler.py  README.md  README.rst  Untitled.ipynb  baecon_conda.yml  pyproject.toml  readthedocs.yml  requirements-docs.txt  requirements.txt  run_measurement.py  setup.py  test_daq_config.toml  test_measurement.py  test_measurement_settings.toml  test_scan.toml  test_sig_gen_config.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Engines/: Engine_template.py  default_engine.py  default_engine_GUI.py  default_engine_async.py  new_engine.py
GUI/: baecon_GUI.py  gui_utils.py  main.py  scratch.py
GUI/cards/: __init__.py  data_card.py  devices_card.py  engine_card.py  experiment_card.py  plot_card.py  run_card.py  scan_card.py
Instruments/: inst_template.py
Instruments/NIDAQ_Base/: NIDAQ_Base.py
Instruments/PulseBlaster/: PulseBlaster.py
Instruments/PulseStreamer/: PulseStreamer  PulseStreamer.py  PulseStreamer_GUI.py  ex_config.toml  scratch.py
Instruments/Pulse_Device/: Pulse_Sequence.py
Instruments/Pulse_Streamer/: PulseStreamer_GUI.py  Pulse_Streamer.py  scratch.py  test_Pulse.py  test_Pulse_Streamer.py  tutorial.rst
Instruments/SG380/: SG380.py  default.toml
Instruments/SG380/baecon/: Engine.py  LICENSE  README.rst  __init__.py  utils.py
Instruments/SG380/baecon/instrument/: __init__.py  instrument.py
Instruments/SG4400L/: SG4400L.py
Instruments/TPI/: TPI.py
baecon/: Engine.py  __init__.py  _base.py  base.py  data.py  nidaq_usb6363.py  utils.py
baecon/device/: __init__.py  device.py
baecon/engine/: __init__.py  engine.py
data/example.zarr/: .zarray  0
dev_files/: baecon_env.yml  vscode_baecon.code-profile
development_info/: baecon_conda_env.yml  baecon_env.yml  baecon_vscode.code-profile  contribution_link.rst  project_roles.rst
development_info/baecon_environment/: baecon_pip_requirements.txt
docs/source/: base.rst  conf.py  contribution_guide.rst  data.rst  device.rst  index.rst  todo.rst  utils.rst
docs/source/Devices/: devices.rst
docs/source/GUI_components/: data_card.rst  engine_card.rst  main_gui.rst  scan_card.rst
docs/source/_static/css/: custom.css
docs/source/guides/: contribution_guide.rst  manual.rst  quickstart.rst  tutorial_device_creation.rst
engines/: default_engine.py
exp_configs/: daq_config.toml  generated_config_file.toml  generation_config.toml  scan.toml  sig_gen_config.toml
src/baecon/: __about__.py  __init__.py  base.py  data.py  utils.py
src/baecon/Configuration_Files/Data/analysis/: NV_contrast.py
src/baecon/Configuration_Files/Engines/: Engine_template.py  default_engine_GUI.py
src/baecon/Configuration_Files/Experiments/: CW_ODMR.toml  Exp_123.toml  last_experiment.toml  odmr.toml  test.toml
src/baecon/Configuration_Files/Scans/: SRS_freq_scan.toml
src/baecon/Devices/: __init__.py  device_template.py
src/baecon/Devices/DummyDevice_Thermometer/: DummyDevice.py
src/baecon/Devices/MCC_DAQ1808X/mcculw-master/mcculw-master/examples/console/: a_in.py  a_in_scan_foreground.py
src/baecon/Devices/NIDAQ_Base/: DAQ_123.toml  NIDAQ_Base.py  PyDAQmx_ref_values.py  __init__.py  default.toml  last_config.toml
src/baecon/Devices/NIDAQ_USB6363/: DAQ_6363.toml  NIDAQ_USB6363.py  last_config.toml
src/baecon/Devices/PulseBlaster/: PulseBlaster.py
src/baecon/Devices/Pulse_Sequence/: Pulse_Sequence.py  Pulse_Sequence_GUI.py  __init__.py  test_seq.toml
src/baecon/Devices/Pulse_Sequence/Pulse_Sequence_GUI/: Pulse_Sequence_GUI.py  __init__.py
src/baecon/Devices/Pulse_Sequence/sequences/: CW_ODMR.toml  test_seq.toml
src/baecon/Devices/Pulse_Streamer/: Pulse_Streamer.py  __init__.py  last_config.toml  tutorial.rst
src/baecon/Devices/SG380/: SG380.py  SRS_123.toml  __int__.py  default.toml  last_config.toml
src/baecon/Devices/SG4400L/: SG4400L.py  SG4400L_legacy.py  SG4400L_tutorial.py
src/baecon/Devices/TPI/: TPI.py
src/baecon/Engines/: default_engine_GUI.py
src/baecon/GUI/: __init__.py  baecon_GUI.py  gui_utils.py  scratch.py
src/baecon/GUI/cards/: __init__.py  data_card.py  devices_card.py  engine_card.py  experiment_card.py  plot_card.py  scan_card.py
src/baecon/data/: __init__.py  data.py
src/baecon/data/analysis/: NV_contrast.py  mean_samples.py
src/baecon/device/: __init__.py  device.py
src/baecon/engine/: __init__.py  engine.py
src/baecon/utils/: baecon_logger.py  utils.py
tests/: generated_config.toml  generated_config_file.toml  test_data.csv  test_data.zarr.7z  test_generation_config.toml  test_measurement.py  test_measurement_settings.toml  test_scan.toml  test_sig_gen_config.toml
tests/Devices/Pulse_Sequence/: test_Pulse_Sequence.py
tests/Devices/Pulse_Streamer/: ex_config.toml  test_Pulse_Streamer.py
tests/Devices/SG380/: test_SG380.py
tests/test_data.zarr/: .zmetadata
tests/test_data.zarr/Daq1/: .zarray  .zattrs  0
tests/test_data.zarr/Daq1_0/: .zarray  .zattrs  0.0  0.1  1.0  1.1
tests/test_data.zarr/frequency/: .zattrs  0
tools/: generate_measurement_configuration.py  run_baecon_measurement.py
tools/test.zarr/: .zmetadata
tools/test.zarr/lat/: 0.0
tools/test.zarr/lon/: 0.0
tools/test.zarr/precipitation/: 0.0.0
tools/test.zarr/reference_time/: .zattrs
tools/test.zarr/temperature/: 0.0.0
tools/test.zarr/time/: .zattrs
