[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baecon"
dynamic = ["version"]
description = 'Baecon: Basic Experiment Control'
readme = "README.rst"
requires-python = ">=3.7"
license = "GPL-3.0"
keywords = ['python', 'experiment', 'laboratory', 
            'control', 'instrument']
authors = [
  { name = "Kevin S. Olsson", email = "olssonks@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator", ## Maybe??
    "Topic :: System :: Hardware",
    "Development Status :: 2 - Pre-Alpha"
]
dependencies = [
  'nicegui>=1.3.6',
  'numpy>=1.24.3',
  'plotly>=5.14.1',
  'pulsestreamer>=1.7.0',
  'PyDAQmx>=1.4.6',
  'pyserial>=3.5',
  'PyVISA>=1.13.0',
  'PyYAML>=6.0.1',
  'toml>=0.10.2',
  'xarray>=2023.5.0',
]

[project.urls]
Documentation = "https://github.com/unknown/my-project#readme"
Issues = "https://github.com/unknown/my-project/issues"
Source = "https://github.com/unknown/my-project"

[tool.hatch.version]
path = "src/baecon/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/my_project tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 93 ## black default length is a hate symbol
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 93
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Ignore unused args
  "ARG001", "ARG002",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore most naming conventions
  "N801","N802", "N803", "N999",
  # Ignore useless return
  "PLR1711",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["my_project"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["my_project", "tests"]
branch = true
parallel = true
omit = [
  "src/my_project/__about__.py",
]

[tool.coverage.paths]
baecon = ["src/baecon", "*/baecon/src"]
tests = ["tests", "*/baecon/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "v$version"
version_files = [
    "src/baecon/__version__.py",
    "pyproject.toml:version"
]
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "fg:#db4c40 bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#706993"],
    ["separator", "fg:#706993"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]